<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_bringup</name>
  <version>1.0.0</version>
  <description>Main orchestration package for launching the rover robot system</description>
  <maintainer email="your_email@email.com">Rover Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rover_description</exec_depend>
  <exec_depend>rover_navigation</exec_depend>
  <exec_depend>rover_simulation</exec_depend>
  <exec_depend>rover_web_interface</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
